tarea Filtros, paginacion y APi de pedidos
